Improve download reliability and cross-platform browser integration